--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ main {
     font-size: 100px;
 } */
 
-#timeEditIFrame {
+.timeEditIFrame {
     z-index: 0;
-    
+    height: 75%;
+    width:100%;
 }
 
 
